Agregando Globales e imagenes

--- a/index.html
+++ b/index.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="/styles/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=PT+Sans:wght@700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/globales.css" />
     <title>CvCanteroWalter</title>
   </head>
-  <body>
-    <header class="contenedor header">
-      <div>imagen</div>
-      <div>
-        <h1>Cantero Walter</h1>
-      </div>
-    </header>
-  </body>
+  <body></body>
 </html>
