--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
     <link rel="stylesheet" href="/styles/globales.css" />
     <title>CvCanteroWalter</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__texto">
+        <h2 class="no-margin">Desarrolo Web</h2>
+      </div>
+    </header>
+  </body>
 </html>
