--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=PT+Sans:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/globales.css" />
@@ -18,9 +20,34 @@
   </head>
   <body>
     <header class="header">
+      <!-- Barra nav -->
+
+      <div class="contenedor">
+        <div class="barra">
+          <!-- Logo nombre -->
+
+          <a href="index.html" class="logo">
+            <h1 class="logo__nombre no-margin centrar-texto">
+              Cantero <span class="logo__bold">Walter</span>
+            </h1>
+          </a>
+          <!-- Fin logo nombre -->
+
+          <!-- Barra de navegacion -->
+          <nav class="navegacion">
+            <a href="sobreMi.html" class="navegacion__enlace">Sobre Mi</a>
+            <a href="proyectos.html" class="navegacion__enlace">Proyectos</a>
+          </nav>
+          <!-- Fin barra de navegacion -->
+        </div>
+      </div>
+      <!-- Fin barra Nav -->
+
+      <!-- Header Texto -->
       <div class="header__texto">
         <h2 class="no-margin">Desarrolo Web</h2>
       </div>
+      <!-- fin Header Texto -->
     </header>
   </body>
 </html>
