--- a/sobreMi.html
+++ b/sobreMi.html
@@ -49,7 +49,18 @@
       <!-- fin Header Texto -->
     </header>
     <main>
-      <h2>Sobremi</h2>
+      <h2 class="titulo__proyectos">Sobre Mi</h2>
+      <div class="contenedor sobremi">
+        <div class="imagen__sobremi">s</div>
+        <div class="texto__sobremi">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident
+            soluta, incidunt suscipit veniam totam in itaque expedita voluptatem
+            nihil perspiciatis nemo, aperiam harum explicabo. Doloribus corrupti
+            vero quis voluptatum voluptate!
+          </p>
+        </div>
+      </div>
     </main>
 
     <!-- footer -->
