--- a/sobreMi.html
+++ b/sobreMi.html
@@ -59,6 +59,11 @@
             nihil perspiciatis nemo, aperiam harum explicabo. Doloribus corrupti
             vero quis voluptatum voluptate!
           </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed
+            nostrum quaerat adipisci illum quidem ad in culpa! Perspiciatis,
+            rerum, iure nulla ex quo vitae quia libero hic unde, fugiat ab.
+          </p>
         </div>
       </div>
     </main>
