--- a/index.html
+++ b/index.html
@@ -11,248 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=PT+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/styles/globales.css" />
     <title>CvCanteroWalter</title>
   </head>
-  <body>
-    <header class="header">
-      <!-- Barra nav -->
-
-      <div class="contenedor">
-        <div class="barra">
-          <!-- Logo nombre -->
-
-          <a href="index.html" class="logo">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              W <span class="logo__bold">C</span>
-            </h1>
-          </a>
-          <!-- Fin logo nombre -->
-
-          <!-- Barra de navegacion -->
-          <nav class="navegacion">
-            <a href="sobreMi.html" class="navegacion__enlace">Sobre Mi</a>
-            <a href="#MisProyectos" class="navegacion__enlace">Proyectos</a>
-          </nav>
-          <!-- Fin barra de navegacion -->
-        </div>
-      </div>
-      <!-- Fin barra Nav -->
-
-      <!-- Header Texto -->
-      <div class="header__texto">
-        <h2 class="no-margin">Desarrolo Web</h2>
-      </div>
-      <!-- fin Header Texto -->
-    </header>
-
-    <!-- main -->
-    <main>
-      <h2 class="titulo__proyectos contenedor" id="MisProyectos">
-        Mis Proyectos
-      </h2>
-      <div class="contenedor proyectos">
-        <div class="proyecto__imagen">
-          <iframe
-            src="https://desarrollo-tiendavirtual-waltercan.netlify.app/"
-            frameborder="0"
-          ></iframe>
-          <!-- Boton -->
-          <button type="button" class="btn cube cube-hover">
-            <div class="bg-top">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg-right">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="text">
-              <a
-                class=""
-                href="https://desarrollo-tiendavirtual-waltercan.netlify.app/index.html"
-                target="_blank"
-                >Ver Más</a
-              >
-            </div>
-          </button>
-          <!-- Fin Boton -->
-        </div>
-        <div class="proyecto__imagen">
-          <iframe
-            src="https://desarrollo-petittjuliete.netlify.app"
-            frameborder="0"
-          ></iframe>
-          <!-- Boton -->
-          <button type="button" class="btn cube cube-hover">
-            <div class="bg-top">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg-right">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="text">
-              <a
-                class=""
-                href="https://desarrollo-petittjuliete.netlify.app/index.html"
-                target="_blank"
-                >Ver Más</a
-              >
-            </div>
-          </button>
-          <!-- Fin Boton -->
-        </div>
-        <!-- iframe -->
-        <div class="proyecto__imagen">
-          <iframe
-            src="https://famous-marigold-9d277c.netlify.app"
-            frameborder="0"
-          ></iframe>
-          <!-- Boton -->
-          <button type="button" class="btn cube cube-hover">
-            <div class="bg-top">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg-right">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="text">
-              <a
-                class=""
-                href="https://famous-marigold-9d277c.netlify.app"
-                target="_blank"
-                >Ver Más</a
-              >
-            </div>
-          </button>
-          <!-- Fin Boton -->
-        </div>
-        <!-- fin iframe -->
-        <!-- iframe -->
-        <div class="proyecto__imagen">
-          <iframe
-            src="https://desarrollo-segurosgenerales.netlify.app"
-            frameborder="0"
-          ></iframe>
-          <!-- Boton -->
-          <button type="button" class="btn cube cube-hover">
-            <div class="bg-top">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg-right">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="text">
-              <a
-                class=""
-                href="https://desarrollo-segurosgenerales.netlify.app"
-                target="_blank"
-                >Ver Más</a
-              >
-            </div>
-          </button>
-          <!-- Fin Boton -->
-        </div>
-        <!-- fin iframe -->
-        <!-- iframe -->
-        <div class="proyecto__imagen">
-          <iframe
-            src="https://desarrollo-blogcafe-waltercan.netlify.app"
-            frameborder="0"
-          ></iframe>
-          <!-- Boton -->
-          <button type="button" class="btn cube cube-hover">
-            <div class="bg-top">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg-right">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="text">
-              <a
-                class=""
-                href="https://desarrollo-blogcafe-waltercan.netlify.app"
-                target="_blank"
-                >Ver Más</a
-              >
-            </div>
-          </button>
-          <!-- Fin Boton -->
-        </div>
-        <!-- fin iframe -->
-        <!-- iframe -->
-        <div class="proyecto__imagen">
-          <iframe
-            src="https://desarrollo-festivalmusica-waltercan.netlify.app"
-            frameborder="0"
-          ></iframe>
-          <!-- Boton -->
-          <button type="button" class="btn cube cube-hover">
-            <div class="bg-top">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg-right">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="bg">
-              <div class="bg-inner"></div>
-            </div>
-            <div class="text">
-              <a
-                class=""
-                href="https://desarrollo-festivalmusica-waltercan.netlify.app"
-                target="_blank"
-                >Ver Más</a
-              >
-            </div>
-          </button>
-          <!-- Fin Boton -->
-        </div>
-        <!-- fin iframe -->
-      </div>
-    </main>
-
-    <!-- Fin Main -->
-
-    <!-- footer -->
-    <footer class="footer">
-      <div class="contenedor">
-        <div class="barra">
-          <!-- Logo nombre -->
-
-          <a href="index.html" class="logo">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              W <span class="logo__bold">C</span>
-            </h1>
-          </a>
-          <!-- Fin logo nombre -->
-
-          <!-- Barra de navegacion -->
-          <nav class="navegacion">
-            <a href="sobreMi.html" class="navegacion__enlace">Sobre Mi</a>
-            <a href="#MisProyectos" class="navegacion__enlace">Proyectos</a>
-          </nav>
-          <!-- Fin barra de navegacion -->
-        </div>
-      </div>
-    </footer>
-    <!-- Fin Footer -->
-  </body>
+  <body></body>
 </html>
