--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/globales.css" />
     <title>CvCanteroWalter</title>
   </head>
-  <body></body>
+  <body>
+    <!-- <header class="Header "> 
+      <div class="Imagen contenedor"></div>
+    </header> -->
+
+
+    <!-- Sidebar -->
+
+    <div id="sidebar">
+      <!-- Icono -->
+      <div class="toggle-btn">
+        <span>&#9776;</span>
+      </div>
+      <!-- Fin Icono -->
+      <ul>
+        <li><img src="/Image/WC.png" alt="Logotipo" class="logo"></li>
+        <li>Inicio</li>
+        <li>Proyectos</li>
+        <li>Contacto</li> 
+      </ul>
+    </div>
+
+    <!-- Fin Sidebar -->
+
+
+
+    <script src="main.js"></script>
 </html>
