--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     <title>CvCanteroWalter</title>
   </head>
   <body>
-    <!-- <header class="Header "> 
-      <div class="Imagen contenedor"></div>
-    </header> -->
 
 
     <!-- Sidebar -->
@@ -41,7 +38,12 @@
 
     <!-- Fin Sidebar -->
 
-
+    <!-- Header -->
+    <div class="header">
+      <div class="header__header">
+      </div>
+    </div>
+    <!-- Fin Header -->
 
     <script src="main.js"></script>
 </html>
