Finalizando Seccion Experiencia

--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/normalize.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/globales.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&family=Montserrat:ital,wght@1,400;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/globales.css">
     <title>CvCanteroWalter</title>
   </head>
   <body>
@@ -30,9 +24,10 @@
       <!-- Fin Icono -->
       <ul>
         <li><img src="/Image/WC.png" alt="Logotipo" class="logo"></li>
-        <li>Inicio</li>
-        <li>Proyectos</li>
-        <li>Contacto</li> 
+        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="#1">Experiencia</a></li>
+        <li><a href="#2">Proyectos</a></li>
+        <li><a href="#3">Contacto</a></li>
       </ul>
     </div>
 
@@ -45,5 +40,79 @@
     </div>
     <!-- Fin Header -->
 
+    <!-- Titulo y Perfil -->
+    <section class="contenido contenedor">
+      <h1 class="titulo">Cantero Walter</h1>
+      <div class="datos">
+        <div class="perfil">
+          <h2 class="perfil__titulo">Perfil Profesional</h2>
+          <p class="perfil__texto">
+            Me motiva mucho desarrollar mis habilidades y crecer profesionalmente.
+          </p>
+          <p class="perfil__texto">Estudiante de Ingeniería en Sistemas. Soy una persona que se capacita constantemente. Planeo insertarme en el ambiente laboral del Desarrollo de Software.</p>
+        </div>
+      </div>
+
+
+      <!--Experiencia   -->
+      <div class="experiencia contenedor" id="1">
+
+        <!-- expeciencia -->
+        <div class="experiencia__uno">
+          <h3 class="experiencia__titulo">ELepe Servicios SRL</h3>
+          <ul class="experiencia__lista">
+            <li>Marzo 2023 - Actualmente</li>
+            <li>Desarrollador GeneXus</li>
+          </ul>
+        </div>
+         <!-- expeciencia -->
+
+          <!-- expeciencia -->
+         <div class="experiencia__uno">
+            <h3 class="experiencia__titulo">H.D.C. International S.A.</h3>
+              <ul class="experiencia__lista">
+                  <li>Enero 2021 - Marzo 2023</li>
+                  <li>Responsable ABM</li>
+                  <li>Administración Webs de la Empresa</li>
+                  <li>Data Entry</li>
+              </ul>
+          </div>
+          <!-- expeciencia -->
+          <!-- expeciencia -->
+          <div class="experiencia__uno">
+            <h3 class="experiencia__titulo">Estacionamiento</h3>
+              <ul class="experiencia__lista">
+                  <li>Diciembre 2018 - Noviembre 2019</li>
+                  <li>Tareas Varias</li>
+              </ul>
+          </div>
+          <!-- expeciencia -->             
+          <!-- expeciencia -->
+          <div class="experiencia__uno">
+            <h3 class="experiencia__titulo">Redes y Servicios S.A.</h3>
+              <ul class="experiencia__lista">
+                  <li>Enero 2018 - Octubre 2018</li>
+                  <li>Lector</li>
+              </ul>
+          </div>
+          <!-- expeciencia -->       
+          <!-- expeciencia -->
+          <div class="experiencia__uno">
+            <h3 class="experiencia__titulo">Grupo Mirgor</h3>
+              <ul class="experiencia__lista">
+                  <li>Junio 2009 - Septiembre 2015</li>
+                  <li>Tareas Varias</li>
+              </ul>
+          </div>
+          <!-- expeciencia -->              
+        
+      </div>
+      <!-- Fin Experiencia -->
+    </section>
+    <!-- Fin Titulo y Perfil -->
+
+    
     <script src="main.js"></script>
 </html>
+
+
