Finalizando Seccion Proyectos

--- a/index.html
+++ b/index.html
@@ -108,6 +108,75 @@
         
       </div>
       <!-- Fin Experiencia -->
+  <!-- Proyectos -->
+  <h2 class="proyectos__titulo">Mis Proyectos</h2>
+      <div class="proyectos">
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://famous-marigold-9d277c.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://famous-marigold-9d277c.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div>
+
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://webventas.netlify.app/" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://webventas.netlify.app/" target="_blank">Ver Más</a>
+          </button>
+        </div>
+
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://desarrollo-petittjuliete.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://desarrollo-petittjuliete.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div>   
+
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://desarrollo-segurosgenerales.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://desarrollo-segurosgenerales.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div>        
+ 
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://desarrollo-presentacion-waltercan.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://desarrollo-presentacion-waltercan.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div> 
+
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://desarrollo-tiendavirtual-waltercan.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://desarrollo-tiendavirtual-waltercan.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div> 
+
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://desarrollo-blogcafe-waltercan.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://desarrollo-blogcafe-waltercan.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div>
+
+        <div class="proyectos__titulo__contenedor">
+          <div class="proyectos__iframe contenedor">
+            <iframe src="https://desarrollo-festivalmusica-waltercan.netlify.app" class="proyectos__pag" ></iframe>
+          </div>
+          <button class="btn"> <a href="https://desarrollo-festivalmusica-waltercan.netlify.app" target="_blank">Ver Más</a>
+          </button>
+        </div>                   
+      </div>
+  <!-- Fin Proyectos -->
+
     </section>
     <!-- Fin Titulo y Perfil -->
 
