Editando seccion de Proyectos

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
       </div>
       <!-- Fin Experiencia -->
   <!-- Proyectos -->
+</section>
+<section class="contenedor">
   <h2 class="proyectos__titulo">Mis Proyectos</h2>
       <div class="proyectos">
         <div class="proyectos__titulo__contenedor">
@@ -177,7 +179,7 @@
       </div>
   <!-- Fin Proyectos -->
 
-    </section>
+  </section>
     <!-- Fin Titulo y Perfil -->
 
     
